Added User List API with sanctum authorizaion feature for OpenAPI 3.0
