# app/Resources/UserResource.php
@@ -4,6 +4,15 @@ namespace App\Resources;
 
 use Illuminate\Http\Resources\Json\JsonResource;
 
+/**
+ * @OA\Schema(
+ *     title="UserResource",
+ *     description="User resource",
+ *     @OA\Xml(
+ *         name="UserResource"
+ *     )
+ * )
+ */
 class UserResource extends JsonResource
 {
     /**
