# storage/api-docs/api-docs.json
@@ -18,15 +18,6 @@
         }
     ],
     "paths": {
-        "/projects": {
-            "get": {
-                "responses": {
-                    "200": {
-                        "description": "Display a listing of projects."
-                    }
-                }
-            }
-        },
         "/users/login": {
             "post": {
                 "tags": [
@@ -71,6 +62,39 @@
                         "description": "Internal Server Error"
                     }
                 }
+            }
+        },
+        "/users": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Get list of users",
+                "description": "Returns list of users",
+                "operationId": "getUserList",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserResource"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
             }
         }
     },
@@ -153,6 +177,13 @@
                     }
                 },
                 "type": "object"
+            },
+            "UserResource": {
+                "title": "UserResource",
+                "description": "User resource",
+                "xml": {
+                    "name": "UserResource"
+                }
             }
         },
         "parameters": {
@@ -209,6 +240,14 @@
                         }
                     }
                 }
+            }
+        },
+        "securitySchemes": {
+            "sanctum": {
+                "type": "apiKey",
+                "description": "Enter token in format (Bearer <token>)",
+                "name": "Authorization",
+                "in": "header"
             }
         }
     },
